--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>Solar</title>
+        <title>Solar System</title>
         <meta name="description" content="Build your own planetarium">
         <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
         <script src="https://unpkg.com/aframe-star-system-component@1.0.0/index.js"></script>
